@@ -1,3 +1,13 @@
+2019-05-15  Andreas Schwab  <schwab@suse.de>
+
+	[BZ #20568]
+	* libio/wfileops.c (_IO_wfile_sync): Correct last argument to
+	__codecvt_do_length.
+	* libio/Makefile (tests): Add tst-wfile-sync.
+	($(objpfx)tst-wfile-sync.out): Depend on $(gen-locales).
+	* libio/tst-wfile-sync.c: New file.
+	* libio/tst-wfile-sync.input: New file.
+
 2019-05-15  Florian Weimer  <fweimer@redhat.com>
 
 	nss: Turn __nss_database_lookup into a compatibility symbol.
@@ -26,6 +36,7 @@
 	* sysdeps/posix/getaddrinfo.c (gaih_inet): Likewise.
 
 2019-05-15  Alexandra Hajkova  <ahajkova@redhat.com>
+
 	* support/support.h (support_install_rootsbindir): New variable.
 	* support/support_paths.c: Likewise.
 	* support/Makefile (CFLAGS-support_paths.c): Add -DROOTSBINDIR_PATH.
